--- a/package.json
+++ b/package.json
@@ -1,11 +1,26 @@
 {
-  "name": "checkcel",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "description": ""
+	"name": "checkcel",
+	"version": "1.0.0",
+	"private": true,
+	"workspaces": [
+		"api",
+		"app"
+	],
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"author": "",
+	"license": "ISC",
+	"description": "",
+	"devDependencies": {
+		"eslint": "8.57.1",
+		"standard": "17.1.2",
+		"prettier": "3.2.5"
+	},
+	"eslintConfig": {
+		"extends": [
+			"./node_modules/standard/eslintrc.json"
+		]
+	}
 }
